[tool.poetry]
name = "google-maps-scraper"
version = "1.0.0"
description = "Production-ready Google Maps scraper with anti-detection features"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.32.0"}
slowapi = "0.1.9"
gunicorn = "21.2.0"
langgraph = "0.2.18"
playwright = "1.40.0"
playwright-stealth = "1.0.6"
aiohttp = "3.9.1"
pydantic = "2.10.4"
pydantic-settings = "2.7.0"
python-dotenv = "1.0.0"
typing-extensions = ">=4.5.0"

[tool.poetry.group.dev.dependencies]
# Development dependencies (optional)
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
start = "gunicorn -w 5 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000 --timeout 6000 main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

